--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+dj-database-url==0.4.2
 Django==1.11.3
 django-tinymce==2.6.0
+gunicorn==19.7.1
 numpy==1.13.1
 olefile==0.44
 Pillow==4.2.1
 pytz==2017.2
 scipy==0.19.1
+whitenoise==3.3.0
